# txlege-bill-scraper

./: README.md  pyproject.toml
src/txlege_bill_scraper/: __init__.py  bases.py  bills.py  build_logger.py  db.py  driver.py  legislator.py  main.py  navigator.py  protocols.py  scrape_scratch.py  texas_house.py  tlo_urls.toml  types_.py  validation_tools.py
src/txlege_bill_scraper/factories/: bills.py
src/txlege_bill_scraper/interfaces/: __init__.py  bill_details.py  bill_list.py  committees.py  lege_session.py  link_fetcher.py  members.py  protocols.py  x_bill_details.py
src/txlege_bill_scraper/interfaces/link_builders/: __init__.py  bases.py  bill_list.py  bills.py  committees.py  members.py
src/txlege_bill_scraper/interfaces/scrapers/: __init__.py  bases.py  bills.py  members.py
src/txlege_bill_scraper/models/: __init__.py  bases.py  bill_list.py  bills.py  committees.py  members.py
src/txlege_bill_scraper/protocols/: __init__.py  bills.py  committees.py
src/txlege_bill_scraper/tests/tests_txlege_bill_scraper/interfaces/: test_members.py
src/txlege_bill_scraper/types/: __init__.py  bills.py  committees.py
tests/: test_bases.py
tests/driver/: test_driver.py
tests/factories/: test_bills.py
tests/interfaces/: test_bill_list.py  test_committees.py  test_lege_session.py  test_members.py  test_session.py
